--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DashboardActivity"></activity>
+        <activity android:name=".TravelActivity"></activity>
     </application>
 
 </manifest>
