Add tela basica de novo gasto

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".DashboardActivity"></activity>
         <activity android:name=".TravelActivity"></activity>
+        <activity android:name=".SpentActivity"></activity>
     </application>
 
 </manifest>
