--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,17 +17,20 @@
             android:label="@string/app_name"
             >
         </activity>
-        <activity android:name=".DashboardActivity"></activity>
+        <activity android:name=".DashboardActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            
+        </activity>
         <activity android:name=".TravelActivity"></activity>
         <activity android:name=".SpentActivity"></activity>
         <activity android:name=".SpentListActivity">
                       
         </activity>
         <activity android:name=".TravelListActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>              
+                          
         </activity>
     </application>
 
