--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,12 +26,8 @@
         </activity>
         <activity android:name=".TravelActivity"></activity>
         <activity android:name=".SpentActivity"></activity>
-        <activity android:name=".SpentListActivity">
-                      
-        </activity>
-        <activity android:name=".TravelListActivity">
-                          
-        </activity>
+        <activity android:name=".SpentListActivity"></activity>
+        <activity android:name=".TravelListActivity"></activity>
     </application>
 
 </manifest>
