--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,9 +27,7 @@
         <activity android:name=".TravelActivity"></activity>
         <activity android:name=".SpentActivity"></activity>
         <activity android:name=".SpentListActivity"></activity>
-        <activity android:name=".TravelListActivity">
-            
-        </activity>
+        <activity android:name=".TravelListActivity"></activity>
     </application>
 
 </manifest>
