--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar" >
         <activity 
-            android:name=".LoginActivity"
+            android:name="io.github.lccezinha.mytravel.activities.LoginActivity"
             android:label="@string/app_name">
             
             <intent-filter>
@@ -22,15 +22,15 @@
             </intent-filter>
         </activity>
         
-        <activity android:name=".DashboardActivity">
+        <activity android:name="io.github.lccezinha.mytravel.activities.DashboardActivity">
             
         </activity>
         
-        <activity android:name=".TravelActivity"></activity>
-        <activity android:name=".SpentActivity"></activity>
-        <activity android:name=".SpentListActivity"></activity>
-        <activity android:name=".TravelListActivity"></activity>
-        <activity android:name=".ConfigurationActivity" />
+        <activity android:name="io.github.lccezinha.mytravel.activities.TravelActivity"></activity>
+        <activity android:name="io.github.lccezinha.mytravel.activities.SpentActivity"></activity>
+        <activity android:name="io.github.lccezinha.mytravel.activities.SpentListActivity"></activity>
+        <activity android:name="io.github.lccezinha.mytravel.activities.TravelListActivity"></activity>
+        <activity android:name="io.github.lccezinha.mytravel.activities.ConfigurationActivity" />
     </application>
 
 </manifest>
